@@ -94,6 +94,12 @@ define it inside the <code>ANT_OPTS</code> environment variable.</p>
 input. However, it consumes <i>all</i> available input. This behavior is
 useful for sending Ant input via an OS pipe. <b>Since Ant 1.7</b>.</p>
 
+<h3>SecureInputHandler</h3>
+
+<p>This InputHandler calls <code>System.console().readPassword()</code>,
+available since Java 1.6.  On earlier platforms it falls back to the
+behavior of DefaultInputHandler. <b>Since Ant 1.7.1</b>.</p>
+
 <h2>InputRequest</h2>
 
 <p>Instances of <code>org.apache.tools.ant.input.InputRequest</code>
